--- a/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
@@ -753,7 +753,8 @@
                     datatype: 'json',
                     //data: { 'resultData': filterResult, 'action': postdata.oper },
                     data: {
-                        'Data': postdata
+                        'Data': postdata,
+                        'Planed__St_Date':Planed__St_Date
                     },
                     type: 'POST',
                     success: function (Result) {
