--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -20,7 +20,11 @@
     @Styles.Render("~/Content/css/Layout")
     @Scripts.Render("~/bundles/Scripts/Layout")
     @Scripts.Render("~/bundles/Scripts/jquery-ui")
+    <link href="~/Asset/css/jquery-confirm.min.css" rel="stylesheet" />
+    <link href="~/Asset/css/jquery-confirm.less" rel="stylesheet/less" />
+   
 
+    <script src="~/Asset/Jquery/jquery-confirm.min.js"></script>
     <style>
         @*
  .loader {
